--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
 
   <!-- navigation -->
     <nav>
+      <ul> 
       <!-- <ul> here ul is parent & li are children  -->
         <!-- sift+alt down = copy entire line -->
         <li><a href="#">Home</a></li>
         <li><a href="#"> Services</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
-        <li><a href="#"></a>Faq</li>
-        <li><a href="#" class="Btn"></a>Sign Up</li>
+        <li><a href="#">Faq</a></li>
+        <li><a href="#" class="Btn">Sign Up</a></li>
       </ul>
     </nav>
   </header>
