--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </nav>
   </header>
 
-  <main>
+   <main> <!--parent of two child 1- left & 2- right -->
      <div class="Content-left">
       <h1>Digital</h1>
       <h2>Marketing</h2>
