--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header><!-- <header> header has two elements 1- div= image & Nav -->
 
     <div class="logo">
-      <img src="logo.png" alt="logo" width="100px">
+      <img src="./images/logo.png" alt="logo" width="100px">
     </div>
 
   <!-- navigation -->
@@ -39,7 +39,7 @@
       <button class="cta">Learn More</button>
      </div>
      <div class="Content-right">
-      <img class="hero-section" src="3d image.png" alt="">
+      <img class="hero-section" src="./images/3d image.png" alt="">
      </div>
   </main>
 </body>
