--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
         <li><a href="#">Faq</a></li>
-        <li><a href="#" class="signup-Btn">Sign Up</a></li>
+        <button class="cta"> Sign Up  </button>
       </ul>
     </nav>
   </header>
