--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li><a href="#"> Services</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
-        <li><a href="#">Faq</a></li>
+        <li><a href="#">FAQ</a></li>
         <button class="cta"> Sign Up  </button>
       </ul>
     </nav>
