--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Coming+Soon&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header><!-- <header> header has two elements 1- div= image & Nav -->
+  <header>
 
     <div class="logo">
       <img src="./images/logo.png" alt="logo" width="100px">
